# project-cmake-simple

./: CMakeLists.txt  CMakeLists.txt.disable
cmake/modules/: Config.cmake.in
